<?xml version="1.0"?>
<package>
  <name>sonos_ros</name>
  <version>0.0.0</version>
  <description>The sonos_ros package</description>

  <maintainer email="rgariepy@clearpathrobotics.com">rgariepy</maintainer>
  <license>BSD</license>
  <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
